--- a/cubo_data/templates/cubo_data/index.html
+++ b/cubo_data/templates/cubo_data/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,11 @@
 </head>
 <body>
     <H1>MAVI APP</H1>
-    <a href="{% url 'login' %}">CUBO DATA</a>
+    <p>
+        <a href="{% url 'login' %}">CUBO DATA</a>
+    </p>
+    <p>
+        <a href="{% url 'conferencias:login_c' %}">CONFÊRENCIAS</a>
+    </p>
 </body>
 </html>
