--- a/cubo_data/templates/cubo_data/table_services.html
+++ b/cubo_data/templates/cubo_data/table_services.html
@@ -5,12 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+body{
+    text-align: center;
+    margin-top: 10%;
+}
+a {
+    
+    text-decoration: none;
+}
+li {
+    border: 1px solid black;
+    padding: 10px;
+    margin: 50px 300px;
+    border-radius: 10px;
+    transition: background-color 0.3s;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: rgb(43, 62, 228); /* Definindo a cor do texto */
+    background-color: rgb(243, 237, 237);
+    list-style-type: none;
+}
+
+li:hover {
+        background-color: #535151; /* Alterando a cor de fundo no hover */
+        color: rgb(255, 255, 255);
+    }
+</style>
 <body>
     <p>
-        <a href="{% url 'save_table' database_name=database_name table_name=table_name %}">SALVAR {{table_name}} DE {{database_name}}</a>
+        <a href="{% url 'save_table' database_name=database_name table_name=table_name %}"><li>SALVAR {{table_name}} DE {{database_name}}</li></a>
     </p>
     <p>    
-        <a href="{% url 'append_table' database_name=database_name table_name=table_name %}">EXPORTAR {{table_name}} PARA O BANCO {{database_name}}</a>
+        <a href="{% url 'append_table' database_name=database_name table_name=table_name %}"><li>EXPORTAR {{table_name}} PARA O BANCO {{database_name}}</li></a>
     </p>
 </body>
 </html>
